--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build": "vue-cli-service build",
     "preview": "node build/index.js --preview",
     "lint": "eslint --ext .js,.vue src",
-    "svgo": "svgo -f src/icons/svg --config=src/icons/svgo.yml"
+    "build:docker": "vue-cli-service build --dest='./docker/dist/'"
   },
   "husky": {
     "hooks": {
