--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -2,10 +2,12 @@ version: "3.5"
 
 services:
   tumo-boot-admin:
+    build:
+      context: .
+    restart: always
+    container_name: tumo-boot-admin
     image: tumo-boot-admin
-    hostname: "tumo-boot-admin"
     environment:
       - TZ=Asia/Shanghai
     ports:
       - 8088:80
-    restart: always
