--- a/.env.staging
+++ b/.env.staging
@@ -1,8 +1,6 @@
-NODE_ENV = production
-
 # just a flag
 ENV = 'staging'
 
 # base api
-VUE_APP_BASE_API = '/stage-api'
+VUE_APP_BASE_API = '/tumo-boot'
 
