--- a/docker/nginx.conf
+++ b/docker/nginx.conf
@@ -5,7 +5,7 @@ server {
     root /data/;
 
     location ~* ^/(tumo-boot) {
-       proxy_pass http://172.16.60.137:8090;
+       proxy_pass http://localhost:8090;
        proxy_connect_timeout 15s;
        proxy_send_timeout 15s;
        proxy_read_timeout 15s;
