--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "scripts": {
     "dev": "vue-cli-service serve",
     "build": "vue-cli-service build",
+    "build:docker": "vue-cli-service build --dest='./docker/dist/'",
     "preview": "node build/index.js --preview",
     "lint": "eslint --ext .js,.vue src"
   },
