--- a/docker/nginx.conf
+++ b/docker/nginx.conf
@@ -1,11 +1,9 @@
 server {
-    listen       80;
-    server_name  localhost;
+    listen    80;
+    root      /data/;
 
-    root /data/;
-
-    location ~* ^/(tumo-boot) {
-       proxy_pass http://localhost:8090;
+    location ^~/tumo-boot {
+       proxy_pass http://127.0.0.1:8090;
        proxy_connect_timeout 15s;
        proxy_send_timeout 15s;
        proxy_read_timeout 15s;
