--- a/.env.development
+++ b/.env.development
@@ -8,7 +8,7 @@ VITE_PUBLIC_PATH = /
 
 # Cross-domain proxy, you can configure multiple
 # Please note that no line breaks
-VITE_PROXY = [["/tumo-boot","http://localhost:8010"],["/upload","http://localhost:8010/upload"]]
+VITE_PROXY = [["/tumo-boot","http://localhost:8010"],["/oss","http://localhost:8010/oss"],["/upload","http://localhost:8010/upload"]]
 # VITE_PROXY=[["/api","https://vvbin.cn/test"]]
 
 # Delete console
@@ -18,7 +18,7 @@ VITE_DROP_CONSOLE = false
 VITE_GLOB_API_URL=/tumo-boot
 
 # File upload address， optional
-VITE_GLOB_UPLOAD_URL=/upload
+VITE_GLOB_UPLOAD_URL=/oss
 
 # Interface prefix
 VITE_GLOB_API_URL_PREFIX=/tumo-boot
