--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tumo-boot-ui",
-  "version": "2.5.0",
+  "version": "2.5.2",
   "scripts": {
     "bootstrap": "yarn install",
     "serve": "npm run dev",
@@ -33,10 +33,10 @@
     "@logicflow/core": "^0.5.0",
     "@logicflow/extension": "^0.5.0",
     "@vueuse/core": "^5.0.3",
-    "@zxcvbn-ts/core": "^0.3.0",
-    "ant-design-vue": "2.1.6",
+    "@zxcvbn-ts/core": "^1.0.0-beta.0",
+    "ant-design-vue": "2.2.0-beta.6",
     "axios": "^0.21.1",
-    "codemirror": "^5.61.1",
+    "codemirror": "^5.62.0",
     "cropperjs": "^1.5.12",
     "crypto-js": "^4.0.0",
     "echarts": "^5.1.2",
@@ -45,25 +45,25 @@
     "mockjs": "^1.1.0",
     "nprogress": "^0.2.0",
     "path-to-regexp": "^6.2.0",
-    "pinia": "2.0.0-beta.3",
+    "pinia": "^2.0.0-beta.3",
     "print-js": "^1.6.0",
     "qrcode": "^1.4.4",
     "sortablejs": "^1.13.0",
-    "tinymce": "^5.8.1",
+    "tinymce": "^5.8.2",
     "vditor": "^3.8.5",
-    "vue": "3.0.11",
+    "vue": "3.1.2",
     "vue-i18n": "9.1.6",
     "vue-json-pretty": "^2.0.2",
-    "vue-router": "^4.0.9",
-    "vue-types": "^3.0.2",
+    "vue-router": "^4.0.10",
+    "vue-types": "^4.0.0",
     "xlsx": "^0.17.0"
   },
   "devDependencies": {
     "@commitlint/cli": "^12.1.4",
     "@commitlint/config-conventional": "^12.1.4",
-    "@iconify/json": "^1.1.358",
+    "@iconify/json": "^1.1.361",
     "@purge-icons/generated": "^0.7.0",
-    "@types/codemirror": "^5.60.0",
+    "@types/codemirror": "^5.60.1",
     "@types/crypto-js": "^4.0.1",
     "@types/fs-extra": "^9.0.11",
     "@types/inquirer": "^7.3.2",
@@ -71,18 +71,18 @@
     "@types/jest": "^26.0.23",
     "@types/lodash-es": "^4.17.4",
     "@types/mockjs": "^1.0.3",
-    "@types/node": "^15.12.4",
+    "@types/node": "^15.12.5",
     "@types/nprogress": "^0.2.0",
     "@types/qrcode": "^1.4.0",
     "@types/qs": "^6.9.6",
     "@types/sortablejs": "^1.10.6",
-    "@typescript-eslint/eslint-plugin": "^4.27.0",
-    "@typescript-eslint/parser": "^4.27.0",
-    "@vitejs/plugin-legacy": "^1.4.1",
+    "@typescript-eslint/eslint-plugin": "^4.28.0",
+    "@typescript-eslint/parser": "^4.28.0",
+    "@vitejs/plugin-legacy": "^1.4.2",
     "@vitejs/plugin-vue": "^1.2.3",
     "@vitejs/plugin-vue-jsx": "^1.1.5",
-    "@vue/compiler-sfc": "3.0.11",
-    "@vue/test-utils": "^2.0.0-rc.7",
+    "@vue/compiler-sfc": "3.1.2",
+    "@vue/test-utils": "^2.0.0-rc.9",
     "autoprefixer": "^10.2.6",
     "commitizen": "^4.2.4",
     "conventional-changelog-cli": "^2.1.1",
@@ -93,19 +93,19 @@
     "eslint-define-config": "^1.0.8",
     "eslint-plugin-jest": "^24.3.6",
     "eslint-plugin-prettier": "^3.4.0",
-    "eslint-plugin-vue": "^7.11.1",
+    "eslint-plugin-vue": "^7.12.1",
     "esno": "^0.7.3",
     "fs-extra": "^10.0.0",
     "http-server": "^0.12.3",
     "husky": "^6.0.0",
     "inquirer": "^8.1.1",
     "is-ci": "^3.0.0",
-    "jest": "^27.0.4",
+    "jest": "^27.0.5",
     "less": "^4.1.1",
     "lint-staged": "^11.0.0",
     "npm-run-all": "^4.1.5",
     "postcss": "^8.3.5",
-    "prettier": "^2.3.1",
+    "prettier": "^2.3.2",
     "pretty-quick": "^3.1.1",
     "rimraf": "^3.0.2",
     "rollup-plugin-visualizer": "5.5.0",
@@ -113,7 +113,7 @@
     "stylelint-config-prettier": "^8.0.2",
     "stylelint-config-standard": "^22.0.0",
     "stylelint-order": "^4.1.0",
-    "tailwindcss": "^2.2.2",
+    "tailwindcss": "^2.2.4",
     "ts-jest": "^27.0.3",
     "ts-node": "^10.0.0",
     "typescript": "4.3.4",
@@ -124,17 +124,26 @@
     "vite-plugin-mock": "^2.8.0",
     "vite-plugin-purge-icons": "^0.7.0",
     "vite-plugin-pwa": "^0.8.1",
-    "vite-plugin-style-import": "^1.0.0",
-    "vite-plugin-svg-icons": "^0.7.1",
+    "vite-plugin-style-import": "^1.0.1",
+    "vite-plugin-svg-icons": "^1.0.0",
     "vite-plugin-theme": "^0.8.1",
     "vue-eslint-parser": "^7.6.0",
-    "vue-tsc": "^0.1.7"
+    "vue-tsc": "^0.2.0"
   },
   "resolutions": {
     "//": "Used to install imagemin dependencies, because imagemin may not be installed in China. If it is abroad, you can delete it",
     "bin-wrapper": "npm:bin-wrapper-china",
-    "rollup": "^2.52.1"
+    "rollup": "^2.52.3"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/anncwb/vue-vben-admin.git"
+  },
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/anncwb/vue-vben-admin/issues"
+  },
+  "homepage": "https://github.com/anncwb/vue-vben-admin",
   "engines": {
     "node": "^12 || >=14"
   }
